<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToPi£</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="clearDisplay">Clear display</string>
    <string name="shutDown">Shut down server</string>
    <string name="playpause">Play / Pause</string>
    <string name="back30s">-30</string>
    <string name="forward30s">+30</string>
    <string name="forward600s">+600</string>
    <string name="back600s">-600</string>
    <string name="ValidationKey">Validation key</string>
    <string name="Port">Port</string>
    <string name="Ip">Ip address</string>
    <string name="ResetMatrix">ResetMatrix</string>
    
    <string name="Setup">Setup</string>
    <string name="Image">Image Controls</string>
    <string name="Video">Video Controls</string>

</resources>
