<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout01"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.1"
        android:background="#222222"
        android:gravity="center_horizontal" >

        <ImageButton
            android:id="@+id/Button_playpause"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:contentDescription="@string/playpause"
            android:src="@android:drawable/ic_media_play" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="#ffffff" >
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="20dp"
        android:layout_weight="1.1"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical|fill_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/Button_back30"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/back30s" />

            <Button
                android:id="@+id/Button_back600"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/back600s" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout03"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical|fill_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/Button_forward30"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/forward30s" />

            <Button
                android:id="@+id/Button_Forward600"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/forward600s" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>